--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 A repo to share the Probability I lecture. 
 
-- [Book](/book) : Contains a working copy of the book based on Davide's [last year notes](/lecture2020).
-- [problemSets](/problemSets) : This year's problem sets in `.tex` source and `.pdf`. Not to be changed (aside from the date, the author and perhaps made more web-friendly / interactive.)
-- [resources](/resources): last year plots and examples. To be redone for the new lecture. 
+- [Book](/book) : Contains a working copy of the book based on Prof. LaVecchia's last year notes.
+<!-- - [problemSets](/problemSets) : This year's problem sets in `.tex` source and `.pdf`. Not to be changed (aside from the date, the author and perhaps made more web-friendly / interactive.) -->
+<!-- - [resources](/resources): last year plots and examples. To be redone for the new lecture.  -->
 - [slides](/slides) this year slides
