--- a/problemSets/PS/PS1/PS1_Solutions.tex
+++ b/problemSets/PS/PS1/PS1_Solutions.tex
@@ -84,7 +84,7 @@
 \noindent \textsc{University of Geneva}     \hfill \textsc{Bachelor in Economics and Management} \\
 \textbf{Probability 1}                      \hfill \textsc{Bachelor in International Relations} \\
 Dr. Daniel \textsc{Flores Agreda}                 \hfill Spring 2021  \\
-ASSIGNMENT 01                               \hfill   February 19th-23rd
+ASSIGNMENT 01
 
 \noindent
 \makebox[\linewidth]{\rule{\textwidth}{0.4pt}}\\[1.5ex]
@@ -97,7 +97,7 @@ ASSIGNMENT 01                               \hfill   February 19th-23rd
 \item problem sets are not graded
 %\item you do not have to give in the problem set for correction
 \item the problem set will be posted on-line one week before its correction in class
-\item if you have any problem you can write me an e-mail: chaonan.jiang@unige.ch
+\item if you have any problem you can write me an e-mail: edoardo.vignotto@unige.ch
 \end{itemize}
 
 
