--- a/book/book.bib
+++ b/book/book.bib
@@ -24,4 +24,11 @@
   year      = {2013},
 }
 
+@Book{ross2014first,
+  author    = {Ross, Sheldon},
+  publisher = {Pearson},
+  title     = {A first course in probability},
+  year      = {2014},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
